@@ -1,4 +1,4 @@
-/* $NetBSD: wskbd.c,v 1.117 2008/04/27 05:15:45 cegger Exp $ */
+/* $NetBSD: wskbd.c,v 1.118 2008/05/01 20:18:19 cegger Exp $ */
 
 /*
  * Copyright (c) 1996, 1997 Christopher G. Demetriou.  All rights reserved.
@@ -79,7 +79,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: wskbd.c,v 1.117 2008/04/27 05:15:45 cegger Exp $");
+__KERNEL_RCSID(0, "$NetBSD: wskbd.c,v 1.118 2008/05/01 20:18:19 cegger Exp $");
 
 #include "opt_ddb.h"
 #include "opt_kgdb.h"
@@ -178,6 +178,9 @@ struct wskbd_softc {
 
 	int		sc_refcnt;
 	u_char		sc_dying;	/* device is being detached */
+
+	wskbd_hotkey_plugin *sc_hotkey;
+	void *sc_hotkeycookie;
 };
 
 #define MOD_SHIFT_L		(1 << 0)
@@ -387,6 +390,8 @@ wskbd_attach(device_t parent, device_t self, void *aux)
 
  	sc->sc_base.me_dv = self;
 	sc->sc_isconsole = ap->console;
+	sc->sc_hotkey = NULL;
+	sc->sc_hotkeycookie = NULL;
 
 #if NWSMUX > 0 || NWSDISPLAY > 0
 	sc->sc_base.me_ops = &wskbd_srcops;
@@ -1613,6 +1618,16 @@ internal_command(struct wskbd_softc *sc, u_int *type, keysym_t ksym,
 	return (0);
 }
 
+device_t
+wskbd_hotkey_register(device_t self, void *cookie, wskbd_hotkey_plugin *hotkey)
+{
+	struct wskbd_softc *sc = device_private(self);
+
+	sc->sc_hotkey = hotkey;
+	sc->sc_hotkeycookie = cookie;
+	return sc->sc_base.me_dv;
+}
+
 static int
 wskbd_translate(struct wskbd_internal *id, u_int type, int value)
 {
@@ -1620,6 +1635,7 @@ wskbd_translate(struct wskbd_internal *id, u_int type, int value)
 	keysym_t ksym, res, *group;
 	struct wscons_keymap kpbuf, *kp;
 	int iscommand = 0;
+	int ishotkey = 0;
 
 	if (type == WSCONS_EVENT_ALL_KEYS_UP) {
 		id->t_modifiers &= ~(MOD_SHIFT_L | MOD_SHIFT_R
@@ -1632,10 +1648,16 @@ wskbd_translate(struct wskbd_internal *id, u_int type, int value)
 	}
 	
 	if (sc != NULL) {
+		if (sc->sc_hotkey != NULL)
+			ishotkey = sc->sc_hotkey(sc, sc->sc_hotkeycookie,
+						type, value);
+		if (ishotkey)
+			return 0;
+
 		if (value < 0 || value >= sc->sc_maplen) {
 #ifdef DEBUG
-			printf("wskbd_translate: keycode %d out of range\n",
-			       value);
+			printf("%s: keycode %d out of range\n",
+			       __func__, value);
 #endif
 			return (0);
 		}
